# shakespeare-markdown

./: LICENSE  README.md  shakespeare-markdown.cabal  stack.yaml
src/Text/: Marcus.hs
test/Text/: MarcusSpec.hs
